Updates to chain rule

--- a/Solutions/lab1_part1_facit.ipynb
+++ b/Solutions/lab1_part1_facit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e34d270b-d19b-4912-b66c-36ec8cae0aa4",
+   "id": "driven-thailand",
    "metadata": {},
    "source": [
     "<h1 style=\"font-size:40px;\"><center>Exercise I:<br> Backpropagation in Numpy\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b865c658-9cb0-46dd-9e0d-bc47471d6338",
+   "id": "demonstrated-vinyl",
    "metadata": {},
    "source": [
     "Welcome to the first lab for Deep Learning!\n",
@@ -33,7 +33,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "d7672fda-ee22-4cbd-83bd-3c310063de96",
+   "id": "senior-switzerland",
    "metadata": {},
    "source": [
     "## Neuron\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b599fd5-79c6-431a-8472-d34a846de1d6",
+   "id": "responsible-petite",
    "metadata": {},
    "source": [
     "## MLP\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5d82e0e-fd57-4055-811d-fd6cc1f08cfa",
+   "id": "generous-honey",
    "metadata": {},
    "source": [
     "## Imports"
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1f1551eb-d493-4094-b9f9-2d1dc26928df",
+   "id": "fossil-simon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a1de8ca-28c9-4e07-bdb5-f94e78a2d8df",
+   "id": "trying-brighton",
    "metadata": {},
    "source": [
     "# Load dataset\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b73a6cf8-9d92-4843-b3e3-56b1a70392d6",
+   "id": "basic-sullivan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a81f3c32-8473-4d08-8a28-1cf01b361de5",
+   "id": "quarterly-rover",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96dd69e1-2f0b-4e02-ba7f-f5621e2579be",
+   "id": "falling-professional",
    "metadata": {},
    "source": [
     "## Predefined settings\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b1d2e094-44b2-4645-b5fd-8dbb37e13622",
+   "id": "international-stack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccd9c7c9-4176-42e8-9b6d-ceae34254de6",
+   "id": "optional-statistics",
    "metadata": {},
    "source": [
     "## One-hot encoding\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f32dfb79-4613-4a7d-b191-6b962188fb27",
+   "id": "sudden-helicopter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62102762-4b52-435b-87f7-dc595818e99d",
+   "id": "monetary-symphony",
    "metadata": {},
    "source": [
     "## Activation function\n",
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "577c9743-3dc7-4447-93b7-6407030fb59f",
+   "id": "preliminary-wealth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "111b3a10-3ec1-4100-a4e0-6f1175a1842b",
+   "id": "novel-script",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d33988cc-1c5a-49a2-932d-acceade682a7",
+   "id": "northern-potter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "76f22dc2-bc82-413c-85c9-d1f4a9574e17",
+   "id": "together-exclusive",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad0da121-00da-4775-9c6b-fc3df30c795b",
+   "id": "suitable-astronomy",
    "metadata": {},
    "source": [
     "### Expected result - sigmoid and dsigmoid\n",
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "222340bb-915c-42cd-b557-f5a35a48ebe7",
+   "id": "awful-eating",
    "metadata": {},
    "source": [
     "### Test Softmax"
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d0c4e047-79e1-45ae-874d-f7609331b947",
+   "id": "herbal-graduate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31ca3d01-4364-4afd-af43-26968dfb5796",
+   "id": "mounted-checklist",
    "metadata": {},
    "source": [
     "## Loss function.\n",
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d7e8a1b7-970b-4f05-91a9-1c9808dfce68",
+   "id": "allied-jewel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f41c709b-5192-430f-82f0-eed743942684",
+   "id": "flush-windows",
    "metadata": {},
    "source": [
     "### Test nll"
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "de63badb-fa35-4c6b-9477-e47b8d9c5634",
+   "id": "professional-italy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a8bb82af-bae9-4bb6-a662-c4d8153642cd",
+   "id": "veterinary-payday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e2c378f-3a41-4a49-9761-701519b0433a",
+   "id": "enabling-badge",
    "metadata": {},
    "source": [
     "## Feedforward\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "8ac67022-8d63-4635-9c23-f34ba0cbe2c2",
+   "id": "incomplete-beach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "580a5074-8477-486b-a2d9-66e04e84fe93",
+   "id": "military-throw",
    "metadata": {},
    "source": [
     "## Init weights\n",
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "39d2b3f4-acd0-49d7-ba76-ff2ec80caf53",
+   "id": "preliminary-power",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,23 +434,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "360e9d0f-8af4-4c91-bf16-1e4b1fdfda48",
+   "id": "numeric-white",
    "metadata": {},
    "source": [
     "## Backpropagation\n",
     "Calculate the gradient loss $\\frac{d}{dW} -\\log(softmax(W \\dot x + b))$. Where x is the input and y is the truth values.\n",
     "\n",
     "**TODO:** Implement the gradient loss function for; \n",
-    "* grad_W_h\n",
-    "* grad_W_o\n",
-    "* grad_b_h\n",
-    "* grad_b_o"
+    "* grad_W_h - Weight gradient of hidden layer\n",
+    "* grad_W_o - Weight gradient of output layer\n",
+    "* grad_b_h - Bias gradient of hidden layer\n",
+    "* grad_b_o - Bias gradient of output layer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "db62f501-06eb-4b0c-95b5-4fb7b5daa758",
+   "id": "roman-category",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42c4ba5f-193e-40f1-9682-1ad73299310d",
+   "id": "female-virginia",
    "metadata": {},
    "source": [
     "## SGD\n",
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "90387dfe-aff8-40cf-b945-40693752b94c",
+   "id": "suspected-genius",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50e0c9a3-0f58-4749-aad0-d15ef05967b4",
+   "id": "parliamentary-superintendent",
    "metadata": {
     "tags": []
    },
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "0ff94eff-04cf-4f3a-b47c-a1663b27d4d0",
+   "id": "reliable-circulation",
    "metadata": {
     "tags": []
    },
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa8948e4-361a-46a8-bd65-c717e7b1a367",
+   "id": "accurate-midnight",
    "metadata": {},
    "source": [
     "## Predict\n",
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ea4124d2-4167-4842-bb68-b0dff2be6b4e",
+   "id": "guilty-cedar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38a3b432-be0f-4acf-b8fd-bbb68b82f4ee",
+   "id": "anonymous-petite",
    "metadata": {},
    "source": [
     "## Metric\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "474f869b-b0d0-4d65-b60e-d0677862c635",
+   "id": "several-franchise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f39b5599-d1df-43e5-aa31-23576a242227",
+   "id": "baking-shelf",
    "metadata": {},
    "source": [
     "## Neural network\n",
@@ -571,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "2df78b06-7086-48e9-94d3-a91e67f534d1",
+   "id": "balanced-implement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "eb9958de-ef0d-4fbf-aafd-0e337044d7ed",
+   "id": "fatty-render",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "7d66a2de-bf0f-4bd3-bcea-b0a24c88d17d",
+   "id": "invalid-passing",
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c19ca58-f210-413b-a2a2-dca3b045b524",
+   "id": "hired-column",
    "metadata": {},
    "source": [
     "## Visualize the result"
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "eab569ae-4a13-4846-924f-0b7be00480e1",
+   "id": "anticipated-communist",
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20129f5d-1e28-4a48-9089-bc0717038bc7",
+   "id": "annoying-childhood",
    "metadata": {},
    "source": [
     "## Expected result\n",
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76cb34ec-79dc-4fc1-a054-bf9570f74018",
+   "id": "floral-notebook",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -750,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
