--- a/lab1_Backpropagation/Exercise_0101 - Numpy.ipynb
+++ b/lab1_Backpropagation/Exercise_0101 - Numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dramatic-bleeding",
+   "id": "interstate-victoria",
    "metadata": {},
    "source": [
     "<center><h1 style=\"font-size:40px;\">Exercise I:<br> Backpropagation in Numpy\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tested-familiar",
+   "id": "alone-treat",
    "metadata": {},
    "source": [
     "Welcome to the first lab for Deep Learning!\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "registered-governor",
+   "id": "specific-project",
    "metadata": {},
    "source": [
     "## Neuron\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "geographic-photographer",
+   "id": "third-election",
    "metadata": {},
    "source": [
     "## MLP\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "direct-appreciation",
+   "id": "technical-entrance",
    "metadata": {},
    "source": [
     "## Imports"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "crude-bosnia",
+   "id": "dangerous-arrangement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intelligent-albany",
+   "id": "declared-hamburg",
    "metadata": {},
    "source": [
     "# Load dataset\n",
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "elder-contrary",
+   "id": "intelligent-truth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "addressed-camping",
+   "id": "radio-taylor",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acknowledged-purpose",
+   "id": "built-creation",
    "metadata": {},
    "source": [
     "# Implement Neural network\n",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intellectual-contribution",
+   "id": "numerical-visiting",
    "metadata": {},
    "source": [
     "## Predefined settings\n",
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "regulation-mobile",
+   "id": "opening-dover",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "palestinian-browse",
+   "id": "incorporated-fundamental",
    "metadata": {},
    "source": [
     "## One-hot encoding\n",
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "initial-growing",
+   "id": "endangered-logistics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "korean-tourism",
+   "id": "sound-toddler",
    "metadata": {},
    "source": [
     "## Activation function\n",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "specialized-calculation",
+   "id": "sunset-canal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "collect-ratio",
+   "id": "turned-ceremony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "copyrighted-dallas",
+   "id": "challenging-teacher",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "graduate-cornwall",
+   "id": "constant-salmon",
    "metadata": {},
    "source": [
     "To test the models. Run the following code and see if the plot is the same as the expected result."
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "worth-punishment",
+   "id": "foster-muscle",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "emerging-trustee",
+   "id": "changed-facial",
    "metadata": {},
    "source": [
     "### Expected result - sigmoid and dsigmoid\n",
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "applied-multimedia",
+   "id": "clear-change",
    "metadata": {},
    "source": [
     "### Test Softmax\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aquatic-collapse",
+   "id": "enhanced-lingerie",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,20 +329,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "south-nature",
+   "id": "unauthorized-grenada",
    "metadata": {},
    "source": [
     "## Loss function.\n",
     "\n",
     "\n",
     "**TODO:** Implement the negative log likelihood defined as:\n",
-    "$C=−\\frac{1}{n}\\sum_{x}^{n}(lna_{y}^{L})$"
+    "$L=−\\frac{1}{n}\\sum_{x}^{n}(ln(a_{y}^{L}))$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "stock-grade",
+   "id": "fabulous-sector",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lucky-chocolate",
+   "id": "three-death",
    "metadata": {},
    "source": [
     "### Test nll\n",
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "introductory-starter",
+   "id": "graphic-gardening",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trained-interaction",
+   "id": "manual-stereo",
    "metadata": {},
    "source": [
     "## Feedforward\n",
@@ -388,15 +388,19 @@
     "* $\\mathbf{y} = softmax(\\mathbf{W}^o \\mathbf{h} + \\mathbf{b^o})$\n",
     "\n",
     "The hidden layer will use sigmoid as activation function but for final classification we will use softmax.\n",
-    "In case we want to observe the activations we can enable **keep_activations**. If enabled, return; y,h,z_h otherwise return y.\n",
+    "In case we want to observe the activations we can enable **keep_activations**. If enabled, return; \n",
+    "* y (output activations),\n",
+    "* h (hidden layer activations),\n",
+    "* z_h (weights for hidden layer) \n",
+    "otherwise return y.\n",
     "\n",
-    "**TODO:** Implement **h** and **y**"
+    "**TODO:** Implement the forward function for $h$, $y$ and $z\\_h$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "freelance-intermediate",
+   "id": "about-position",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "photographic-lemon",
+   "id": "institutional-teacher",
    "metadata": {},
    "source": [
     "## Init weights\n",
@@ -428,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "brilliant-petite",
+   "id": "appointed-partition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,28 +444,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "informed-soundtrack",
+   "id": "excited-airline",
    "metadata": {},
    "source": [
     "## Backpropagation\n",
-    "Calculate the gradient loss $\\frac{d}{dW} -\\log(softmax(W \\dot x + b))$. Where x is the input and y is the truth values.\n",
+    "To get a reminder of backpropagation take a look at this [explaination](https://dfdazac.github.io/06-neural-networks-numpy.html). Below we summarize the calculation of one node w_{iL}. \n",
+    "\n",
+    "We have a loss function $\\mathcal{L}(\\theta)$ for the negative log likelihood over a single observation $\\mathcal{L}(\\theta) = -\\log(softmax(W \\dot x + b)) = -z_{kL} + log(Z)$. Observe that we skipped a few steps for this so please take a closer look at the *explaination*.\n",
+    "The loss $\\mathcal{L}$  is a function of the quantity $z_{iL}$, which is a function of the weights $w_{iL}$ of unit $i$ in the layer $L$. Therefore, to obtain the gradient of the loss with respect to the weights $w_{iL}$. Therefore, we must use the chain rule to calculate:\n",
+    "\n",
+    "$$\\frac{\\partial \\mathcal{L}}{\\partial w_{iL}} = \\frac{\\partial \\mathcal{L}}{\\partial z_{iL}} \\frac{\\partial z_{iL}}{\\partial w_{iL}}$$\n",
+    "\n",
+    "$\\frac{\\partial \\mathcal{L}}{\\partial w_{iL}}$ Indicates the first derivate and the second derivate through $\\frac{\\partial z_{iL}}{\\partial w_{iL}}$. This give us:\n",
+    "\n",
+    "$$\\frac{\\partial \\mathcal{L}}{\\partial w_{iL}} = \\frac{\\partial \\mathcal{L}}{\\partial z_{iL}}a_{L-1}$$\n",
+    "\n",
+    "\n",
+    "This means that for all weight vectors $w_{iL}$, the gradient is obtained by multiplying the activation vector of the previous layer by the derivative \n",
+    "$\\frac{\\partial \\mathcal{L}}{\\partial z_{iL}}$\n",
+    "\n",
+    "If we take the derivatives $\\frac{\\partial \\mathcal{L}}{\\partial z_{iL}}$, for i = 1,...,K, in a column vector $\\frac{\\partial \\mathcal{L}}{\\partial z_{L}}$, then the gradient matrix can be calculated in a compact way using an **outer** product of vectors:\n",
+    "\n",
+    "$$\\nabla w_{L}\\mathcal{L} = \\frac{\\partial \\mathcal{L}}{\\partial z_{L}}a^{T}_{L-1}$$\n",
+    "\n",
+    "Now we have the equation derivate for a single node $w_{iL}$\n",
+    "\n",
+    "**TODO:** Calculate the gradient loss $\\frac{d}{dW} -\\log(softmax(W \\dot x + b))$. Where $x$ is the input and y is the truth values.\n",
     "\n",
     "**TODO:** Implement the gradient loss function for; \n",
-    "* grad_W_h\n",
-    "* grad_W_o\n",
-    "* grad_b_h\n",
-    "* grad_b_o"
+    "* grad_W_h - Weight gradient of hidden layer\n",
+    "* grad_W_o - Weight gradient of output layer\n",
+    "* grad_b_h - Bias gradient of hidden layer\n",
+    "* grad_b_o - Bias gradient of output layer\n",
+    "\n",
+    "**Hint:** Dot product and dsigmoid might prove helpful"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "accessible-spouse",
+   "id": "chronic-livestock",
    "metadata": {},
    "outputs": [],
    "source": [
     "def grad_loss(x, y_true):\n",
+    "    y, h, z_h = forward(x, keep_activations=True)\n",
     "    # TODO\n",
+    "    \n",
     "    grads = {\"W_h\": grad_W_h, \"b_h\": grad_b_h,\n",
     "             \"W_o\": grad_W_o, \"b_o\": grad_b_o}\n",
     "    return grads"
@@ -469,19 +498,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "angry-recommendation",
+   "id": "standard-hours",
    "metadata": {},
    "source": [
     "## SGD\n",
     "Uses the grad function output to update $W$ and $b$\n",
     "\n",
-    "**TODO:** Implement SGD to update the weights provided from **grad_loss function** with $w = w-\\eta \\nabla Q(w)$ where Q(w) is the loss function, $\\eta$ is the learning rate and $w$ is the weight."
+    "**TODO:** Implement SGD to update the weights provided from **grad_loss function** with $W_{l} = W_{l}-\\alpha \\nabla w_{l}\\mathcal{L}(\\theta)$ where $\\mathcal{L}(\\theta)$ is the loss function, $\\alpha$ is the learning rate and $w$ is the weight at layer l in L."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "interim-logistics",
+   "id": "secret-graphics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "infinite-prayer",
+   "id": "weird-locking",
    "metadata": {
     "tags": []
    },
@@ -508,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "british-detroit",
+   "id": "horizontal-image",
    "metadata": {
     "tags": []
    },
@@ -520,7 +549,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "synthetic-stamp",
+   "id": "chinese-pontiac",
    "metadata": {},
    "source": [
     "## Predict\n",
@@ -530,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "criminal-updating",
+   "id": "hidden-treaty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "documentary-twins",
+   "id": "statistical-british",
    "metadata": {},
    "source": [
     "## Metric\n",
@@ -550,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "numeric-falls",
+   "id": "artificial-review",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "still-thomas",
+   "id": "identical-charge",
    "metadata": {},
    "source": [
     "## Neural network\n",
@@ -570,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "outer-fancy",
+   "id": "romance-remainder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "familiar-theology",
+   "id": "purple-salem",
    "metadata": {},
    "source": [
     "## Training\n",
@@ -618,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "still-inquiry",
+   "id": "toxic-journey",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "secondary-basics",
+   "id": "superb-headquarters",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "north-cardiff",
+   "id": "christian-antenna",
    "metadata": {},
    "source": [
     "## Visualize the result\n",
@@ -676,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "political-creation",
+   "id": "acquired-rouge",
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bottom-america",
+   "id": "adjusted-northern",
    "metadata": {},
    "source": [
     "## Expected result\n",
@@ -716,7 +745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "traditional-technology",
+   "id": "floating-intranet",
    "metadata": {},
    "source": [
     "**Question:** Can the result be improved? \\\n",
@@ -726,7 +755,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "signed-latex",
+   "id": "diagnostic-tennis",
    "metadata": {},
    "source": [
     "## End\n",
