--- a/lab1_Backpropagation/Exercise_0102 - PyTorch.ipynb
+++ b/lab1_Backpropagation/Exercise_0102 - PyTorch.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# local modules\n",
-    "from config import flying_objects_config\n",
+    "from config import LabConfig\n",
     "from sklearn.datasets import load_digits\n",
     "from sklearn import preprocessing\n",
     "import numpy as np\n",
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg = flying_objects_config()"
+    "cfg = LabConfig()"
    ]
   },
   {
@@ -141,11 +141,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An architecture with 1 or more hidden layers are known as a deep/multilayer feedforward model or multilayer perceptron model (MLP). \\\n",
+    "An architecture with 1 or more hidden layers are known as a deep/multilayer feedforward model or multilayer perceptron model (MLP). \n",
     "\n",
     "## Task 1\n",
     "\n",
-    "**TODO:** Implement the MLP architecture to have 1 or more hidden layers. "
+    "**TODO:** Implement the MLP architecture to have 1 or more hidden layers."
    ]
   },
   {
@@ -158,17 +158,9 @@
     "    def __init__(self, input_size, output_size,hidden_size):\n",
     "        super(MLP, self).__init__()\n",
     "        # TODO\n",
-    "        self.fc1 = nn.Linear(input_size, hidden_size)\n",
-    "        self.relu = nn.ReLU()\n",
-    "        self.fc2 = nn.Linear(hidden_size, output_size)\n",
-    "\n",
+    " \n",
     "    def forward(self, x):\n",
     "        # TODO\n",
-    "        x = x.view(x.size(0), -1) # Flatten (batchsize, image size)\n",
-    "        \n",
-    "        hidden = self.fc1(x)\n",
-    "        relu = self.relu(hidden)\n",
-    "        output = self.fc2(relu)\n",
     "        return output"
    ]
   },
@@ -304,16 +296,15 @@
     "        running_loss = 0.0\n",
     "        for i, (inputs, labels) in enumerate(trainloader, 0):\n",
     "            # TODO: zero parameter gradients\n",
-    "            optimizer.zero_grad()\n",
     "\n",
     "            # TODO: Feed forward\n",
-    "            outputs = model(inputs)\n",
+    "            \n",
     "            # TODO: Calculate loss\n",
-    "            loss = criterion(outputs, labels)\n",
+    "            \n",
     "            # TODO: Backpropagate\n",
-    "            loss.backward()\n",
+    "     \n",
     "            # TODO: Optimizer step\n",
-    "            optimizer.step()\n",
+    "           \n",
     "\n",
     "            # print statistics\n",
     "            running_loss += loss.item()\n",
