Removed output from labs

--- a/lab2_MLP_Classification/Exercise_0202 - Performance.ipynb
+++ b/lab2_MLP_Classification/Exercise_0202 - Performance.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,18 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/site-packages/pytorch_lightning/metrics/__init__.py:43: LightningDeprecationWarning: `pytorch_lightning.metrics.*` module has been renamed to `torchmetrics.*` and split off to its own package (https://github.com/PyTorchLightning/metrics) since v1.3 and will be removed in v1.5\n",
-      "  rank_zero_deprecation(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -96,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,26 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: True, used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 10 [4/4] {'loss': '0.716'}\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = Model(MLP(**config[\"model_params\"]),**config)\n",
     "\n",
@@ -288,52 +262,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " ########## STATISTICS for Training Data ########## \n",
-      "\n",
-      "Accuracy   0.49\n",
-      "Sensitivity   0.96\n",
-      "Specificity   0.02\n",
-      "Loss   Not implemented\n",
-      "\n",
-      " ##################################################\n",
-      "\n",
-      " ########## STATISTICS for Validation Data ########## \n",
-      "\n",
-      "Accuracy   0.548\n",
-      "Sensitivity   0.962\n",
-      "Specificity   0.134\n",
-      "Loss   Not implemented\n",
-      "\n",
-      " ##################################################\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/site-packages/pytorch_lightning/trainer/deprecated_api.py:143: LightningDeprecationWarning: The use of `Trainer.get_model()` is deprecated in favor of `Trainer.lightning_module` and will be removed in v1.4.\n",
-      "  rank_zero_deprecation(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Call the stats function to print out statistics for classification problems\n",
     "plot.stats_class(x_train, d_train, 'Training', model)\n",
     "plot.stats_class(x_val, d_val, 'Validation', model)\n",
     "\n",
     "# Show the decision boundary for the training dataset\n",
-    "plot.decision_bondary(trainer.get_model(), x_train, d_train)\n",
+    "plot.decision_bondary(trainer.lightning_module, x_train, d_train)\n",
     "\n",
     "# If you uncomment this one you will see how the decsion boundary is with respect to the validation data\n",
-    "plot.decision_bondary(trainer.get_model(),x_val, d_val)"
+    "plot.decision_bondary(trainer.lightning_module,x_val, d_val)"
    ]
   },
   {
@@ -363,13 +304,6 @@
     "\n",
     "**TODO:** How many hidden nodes do you need to find a reasonable solution to the problem?  Extra: Can you figure out why this many?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
