--- a/lab2_MLP_Classification/Exercise_0203 - Regression.ipynb
+++ b/lab2_MLP_Classification/Exercise_0203 - Regression.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,18 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/stud/f/fremar16/miniconda3/envs/DL-Labs/lib/python3.9/site-packages/pytorch_lightning/metrics/__init__.py:43: LightningDeprecationWarning: `pytorch_lightning.metrics.*` module has been renamed to `torchmetrics.*` and split off to its own package (https://github.com/PyTorchLightning/metrics) since v1.3 and will be removed in v1.5\n",
-      "  rank_zero_deprecation(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -111,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,14 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class MLP(torch.nn.Module):\n",
     "    def __init__(self, \n",
     "                inp_dim=None,         \n",
-    "                hidden_nodes=1,                      # number of nodes in hidden layer\n",
+    "                hidden_nodes=1, # number of nodes in hidden layer\n",
     "                num_out=None,\n",
     "                **kwargs\n",
     "            ):\n",
@@ -164,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,12 +203,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = {\n",
-    "    'max_epochs':4,\n",
+    "    'max_epochs':20,\n",
     "    'model_params':{\n",
     "        'inp_dim':x_train.shape[1],         \n",
     "        'hidden_nodes':1,   # activation functions for the hidden layer\n",
@@ -249,26 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: True, used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 4 [10/10] {'loss': '1.02'}\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = Model(MLP(**config[\"model_params\"]),**config)\n",
     "\n",
@@ -302,7 +276,7 @@
    "outputs": [],
    "source": [
     "plot.stats_class(x_train, d_train, 'Training', model)\n",
-    "plot.stats_class(x_val, d_val, 'Validation', model)\n"
+    "plot.stats_class(x_val, d_val, 'Validation', model)"
    ]
   },
   {
@@ -310,7 +284,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d_train"
+   ]
   }
  ],
  "metadata": {
